# mkg-lib-events

./: .gitignore  .releaserc.json  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mkg_lib_events/: __init__.py  client.py  consumer.py  dlq.py  exceptions.py  handler.py  logging.py  publisher.py  registry.py  retry.py  subscription.py  validator.py
src/mkg_lib_events/models/: __init__.py  base.py  entity.py  schema.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_consumer.py  test_dlq.py  test_events.py  test_handler.py  test_publisher.py  test_retry.py  test_subscription.py  test_validator.py
