[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkg-lib-events"
version = "0.1.0"
description = "Event-Library fuer die MKG Platform. Definiert Event-Schemas, EventBridge-Integration, Event-Publisher und -Consumer Utilities."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "MKG Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "boto3>=1.34.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
core = [
    "mkg-lib-core>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
    "bandit>=1.7",
    "boto3-stubs[events]>=1.34.0",
    "moto[events]>=5.0",
]

[project.urls]
Repository = "https://github.com/mkg-machines/mkg-lib-events"

[tool.hatch.build.targets.wheel]
packages = ["src/mkg_lib_events"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF012", # mutable class attributes - intentional for class-level configs
    "RUF022", # __all__ not sorted - intentional grouping by category
    "UP046",  # Generic[T] vs type parameters - Generic[T] is more widely supported
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001", # unused function arguments in test callbacks
    "ARG002", # unused method arguments in test handlers
]

[tool.ruff.lint.isort]
known-first-party = ["mkg_lib_events", "mkg_lib_core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/mkg_lib_events --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/mkg_lib_events"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert warnings in production code
